doks/apps/pacman/patch-mongo-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  type: ClusterIP
