doks/apps/pacman/patch-pacman-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pacman
spec:
  type: ClusterIP
